# rust_auth_full

./: Cargo.toml  Dockerfile  notes.txt
migrations/2025-11-20-052320-0000_users/: down.sql  up.sql
migrations/2026-01-20-042145-0000_update_user_verification_fields/: down.sql  up.sql
migrations/2026-01-20-044517-0000_user_email_verification_table/: down.sql  up.sql
migrations/2026-01-26-045143-0000_user_forget_pass_data/: down.sql  up.sql
migrations/2026-01-26-123236-0000_user_reset_password_email_verification/: down.sql  up.sql
migrations/2026-01-27-085741-0000_update_user_reset_pass_validations/: down.sql  up.sql
migrations/2026-01-29-042401-0000_userNotes/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  middleware.rs  models.rs  routes.rs  schema.rs
src/db/: auth.rs  mod.rs  users.rs
src/dtos/: loggedIn_user_reset_password_dto.rs  login_dto.rs  mod.rs  non_logged_in_user_reset_password_dto.rs  note_dto.rs  register_dto.rs  send_otp.rs  user_dto.rs  user_notes_vec_response_dto.rs  user_ok_response_dto.rs  verify_email_dto.rs
src/handler/: auth.rs  users.rs
src/mail/: emails_contents.rs  mail.rs  mod.rs  sendMail.rs
src/utils/: password.rs  token.rs
