[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = {version = "0.8.7"}
axum-extra = {version = "0.12.2" , features = ["cookie"]}
chrono = {version = "0.4.42" , features=["serde"]}
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
http-serde = "2.1.1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lettre = "0.11.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3.44"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = {version = "1.18.1" , features = ["serde" , "v4"]}
validator = {version = "0.20.0" , features = ["derive"]}

